force-app/main/default/objects/AdminTool_DeploymentJob__c/AdminTool_DeploymentJob__c.object-meta.xml
<CustomObject>
    <description>Stores SF Admin Hub cross-org deployment validation and deployment job results.</description>
    <label>Admin Tool Deployment Job</label>
    <nameField>
        <displayFormat>DEP-{000000}</displayFormat>
        <label>Deployment Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Deployment Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>