force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/DeployStatus__c.field-meta.xml
<CustomField>
    <fullName>DeployStatus__c</fullName>
    <label>Deploy Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>