force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/ExternalJobId__c.field-meta.xml
<CustomField>
    <fullName>ExternalJobId__c</fullName>
    <label>External Job Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>