force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/LastWaveCompleted__c.field-meta.xml
<CustomField>
    <fullName>LastWaveCompleted__c</fullName>
    <label>Last Wave Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>