force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/PackageJson__c.field-meta.xml
<CustomField>
    <fullName>PackageJson__c</fullName>
    <label>Package JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>