force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/PackageSizeBytes__c.field-meta.xml
<CustomField>
    <fullName>PackageSizeBytes__c</fullName>
    <label>Package Size Bytes</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>