force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/ResultJson__c.field-meta.xml
<CustomField>
    <fullName>ResultJson__c</fullName>
    <label>Result JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>