force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/SourceOrg__c.field-meta.xml
<CustomField>
    <fullName>SourceOrg__c</fullName>
    <label>Source Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>