force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/StartedBy__c.field-meta.xml
<CustomField>
    <fullName>StartedBy__c</fullName>
    <label>Started By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>