force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Validation Failed</fullName>
            </value>
            <value>
                <fullName>Retrieving</fullName>
            </value>
            <value>
                <fullName>Validation Running</fullName>
            </value>
            <value>
                <fullName>Deploying</fullName>
                <default>true</default>
                <label>Deploying</label>
            </value>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>