force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>StatusMessage__c</fullName>
    <label>Status Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>