force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/TargetNamedCredential__c.field-meta.xml
<CustomField>
    <fullName>TargetNamedCredential__c</fullName>
    <label>Target Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>