force-app/main/default/objects/AdminTool_DeploymentJob__c/fields/ValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>ValidationStatus__c</fullName>
    <label>Validation Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>